# Overtunez

./: CONTRIBUTING.md  DESIGN.md  README.md
faust/: README.md  additive_synth.dsp  additive_synth_phase_reset_experiment.dsp
rust/crates/engine/: Cargo.toml
rust/crates/engine/src/: lib.rs  partial.rs  wavetable.rs
rust/crates/plugin/: Cargo.toml
rust/crates/plugin/src/: lib.rs  main.rs
