[package]
name = "overtunez-plugin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "overtunez"
path = "src/main.rs"
required-features = ["standalone"]

[features]
default = []
standalone = ["nih_plug/standalone"]

[dependencies]
overtunez-engine = { path = "../engine" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
